// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aggression 1`] = `
{
  "annotation": {},
  "chartType": "boxPlot",
  "config": {
    "boxPlot": {
      "annotation": {
        "annotationArea": {
          "areaBorderColor": "#BCC1CB",
          "areaBorderRadius": 0,
          "areaBorderWidth": 0,
          "areaColor": "#BCC1CB",
          "areaColorOpacity": 0.12,
          "areaLineDash": [
            2,
            2,
          ],
          "outerPadding": 4,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 4,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationHorizontalLine": {
          "endSymbolVisible": false,
          "lineColor": "#BCC1CB",
          "lineStyle": "solid",
          "lineVisible": true,
          "lineWidth": 1,
          "startSymbolVisible": true,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationPoint": {
          "textBackgroundBorderColor": "#3641594d",
          "textBackgroundBorderRadius": 4,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#364159",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationVerticalLine": {
          "endSymbolVisible": false,
          "lineColor": "#BCC1CB",
          "lineStyle": "solid",
          "lineVisible": true,
          "lineWidth": 1,
          "startSymbolVisible": true,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
      },
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
        "negativeColor": "#EB3373",
        "positiveColor": "#7E5DFF",
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
        "titleFontColor": "#21252c",
        "titleFontSize": 12,
        "titleFontWeight": "bold",
      },
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridLineDash": [
            4,
            2,
          ],
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridLineDash": [
            4,
            2,
          ],
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "boxPlot": {
        "annotation": {
          "annotationArea": {
            "areaBorderColor": "#BCC1CB",
            "areaBorderRadius": 0,
            "areaBorderWidth": 0,
            "areaColor": "#BCC1CB",
            "areaColorOpacity": 0.12,
            "areaLineDash": [
              2,
              2,
            ],
            "outerPadding": 4,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 4,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationHorizontalLine": {
            "endSymbolVisible": false,
            "lineColor": "#BCC1CB",
            "lineStyle": "solid",
            "lineVisible": true,
            "lineWidth": 1,
            "startSymbolVisible": true,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationPoint": {
            "textBackgroundBorderColor": "#3641594d",
            "textBackgroundBorderRadius": 4,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#364159",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationVerticalLine": {
            "endSymbolVisible": false,
            "lineColor": "#BCC1CB",
            "lineStyle": "solid",
            "lineVisible": true,
            "lineWidth": 1,
            "startSymbolVisible": true,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
        },
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
          "negativeColor": "#EB3373",
          "positiveColor": "#7E5DFF",
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
          "titleFontColor": "#21252c",
          "titleFontSize": 12,
          "titleFontWeight": "bold",
        },
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridLineDash": [
              4,
              2,
            ],
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridLineDash": [
              4,
              2,
            ],
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "High income",
      "__Dim_Color__": "High income",
      "__Dim_X__": "Sub-Saharan Africa",
      "__Max__": 11.62222959,
      "__Meadian__": 10.09027907,
      "__Min__": 9.16270124,
      "__Q1__": 10.07530816,
      "__Q3__": 10.27579542,
      "group": "High income",
      "x": "Sub-Saharan Africa",
      "y1": 9.16270124,
      "y2": 10.07530816,
      "y3": 10.09027907,
      "y4": 10.27579542,
      "y5": 11.62222959,
    },
    {
      "__Dim_ColorId__": "Low income",
      "__Dim_Color__": "Low income",
      "__Dim_X__": "Sub-Saharan Africa",
      "__Max__": 11.64427467,
      "__Meadian__": 10.1736233,
      "__Min__": 8.721525214,
      "__Q1__": 9.641352839,
      "__Q3__": 10.57169914,
      "group": "Low income",
      "x": "Sub-Saharan Africa",
      "y1": 8.721525214,
      "y2": 9.641352839,
      "y3": 10.1736233,
      "y4": 10.57169914,
      "y5": 11.64427467,
    },
    {
      "__Dim_ColorId__": "Low income",
      "__Dim_Color__": "Low income",
      "__Dim_X__": "South Asia",
      "__Max__": 12.50192084,
      "__Meadian__": 10.94903493,
      "__Min__": 9.404757278,
      "__Q1__": 10.36482449,
      "__Q3__": 11.5806383,
      "group": "Low income",
      "x": "South Asia",
      "y1": 9.404757278,
      "y2": 10.36482449,
      "y3": 10.94903493,
      "y4": 11.5806383,
      "y5": 12.50192084,
    },
    {
      "__Dim_ColorId__": "High income",
      "__Dim_Color__": "High income",
      "__Dim_X__": "South Asia",
      "__Max__": 9.732841997,
      "__Meadian__": 9.732841997,
      "__Min__": 9.732841997,
      "__Q1__": 9.732841997,
      "__Q3__": 9.732841997,
      "group": "High income",
      "x": "South Asia",
      "y1": 9.732841997,
      "y2": 9.732841997,
      "y3": 9.732841997,
      "y4": 9.732841997,
      "y5": 9.732841997,
    },
    {
      "__Dim_ColorId__": "Low income",
      "__Dim_Color__": "Low income",
      "__Dim_X__": "Middle East & North Africa",
      "__Max__": 11.60653481,
      "__Meadian__": 10.91206173,
      "__Min__": 9.541951901,
      "__Q1__": 10.33719892,
      "__Q3__": 11.29821858,
      "group": "Low income",
      "x": "Middle East & North Africa",
      "y1": 9.541951901,
      "y2": 10.33719892,
      "y3": 10.91206173,
      "y4": 11.29821858,
      "y5": 11.60653481,
    },
    {
      "__Dim_ColorId__": "High income",
      "__Dim_Color__": "High income",
      "__Dim_X__": "Middle East & North Africa",
      "__Max__": 11.92092709,
      "__Meadian__": 11.09996104,
      "__Min__": 10.2396509,
      "__Q1__": 10.63879995,
      "__Q3__": 11.54301107,
      "group": "High income",
      "x": "Middle East & North Africa",
      "y1": 10.2396509,
      "y2": 10.63879995,
      "y3": 11.09996104,
      "y4": 11.54301107,
      "y5": 11.92092709,
    },
    {
      "__Dim_ColorId__": "Low income",
      "__Dim_Color__": "Low income",
      "__Dim_X__": "Latin America & Caribbean",
      "__Max__": 10.6064696,
      "__Meadian__": 10.45467215,
      "__Min__": 10.14653181,
      "__Q1__": 10.32106777,
      "__Q3__": 10.45844052,
      "group": "Low income",
      "x": "Latin America & Caribbean",
      "y1": 10.14653181,
      "y2": 10.32106777,
      "y3": 10.45467215,
      "y4": 10.45844052,
      "y5": 10.6064696,
    },
    {
      "__Dim_ColorId__": "High income",
      "__Dim_Color__": "High income",
      "__Dim_X__": "Latin America & Caribbean",
      "__Max__": 12.20655104,
      "__Meadian__": 10.16606248,
      "__Min__": 8.743652009,
      "__Q1__": 9.413881158,
      "__Q3__": 11.00011805,
      "group": "High income",
      "x": "Latin America & Caribbean",
      "y1": 8.743652009,
      "y2": 9.413881158,
      "y3": 10.16606248,
      "y4": 11.00011805,
      "y5": 12.20655104,
    },
    {
      "__Dim_ColorId__": "High income",
      "__Dim_Color__": "High income",
      "__Dim_X__": "East Asia & Pacific",
      "__Max__": 13.24880824,
      "__Meadian__": 10.14633178,
      "__Min__": 7.800035977,
      "__Q1__": 8.850646235,
      "__Q3__": 11.59877618,
      "group": "High income",
      "x": "East Asia & Pacific",
      "y1": 7.800035977,
      "y2": 8.850646235,
      "y3": 10.14633178,
      "y4": 11.59877618,
      "y5": 13.24880824,
    },
    {
      "__Dim_ColorId__": "Low income",
      "__Dim_Color__": "Low income",
      "__Dim_X__": "East Asia & Pacific",
      "__Max__": 12.07411874,
      "__Meadian__": 10.22954548,
      "__Min__": 8.316035904,
      "__Q1__": 9.038602613,
      "__Q3__": 10.71782871,
      "group": "Low income",
      "x": "East Asia & Pacific",
      "y1": 8.316035904,
      "y2": 9.038602613,
      "y3": 10.22954548,
      "y4": 10.71782871,
      "y5": 12.07411874,
    },
    {
      "__Dim_ColorId__": "Low income",
      "__Dim_Color__": "Low income",
      "__Dim_X__": "Europe & Central Asia",
      "__Max__": 11.3012157,
      "__Meadian__": 10.39108655,
      "__Min__": 9.831631935,
      "__Q1__": 9.939275167,
      "__Q3__": 10.95556656,
      "group": "Low income",
      "x": "Europe & Central Asia",
      "y1": 9.831631935,
      "y2": 9.939275167,
      "y3": 10.39108655,
      "y4": 10.95556656,
      "y5": 11.3012157,
    },
    {
      "__Dim_ColorId__": "High income",
      "__Dim_Color__": "High income",
      "__Dim_X__": "Europe & Central Asia",
      "__Max__": 12.62940296,
      "__Meadian__": 11.06642694,
      "__Min__": 9.522480948,
      "__Q1__": 10.43085982,
      "__Q3__": 11.73822523,
      "group": "High income",
      "outliers": [
        8.5,
        13.5,
      ],
      "x": "Europe & Central Asia",
      "y1": 9.522480948,
      "y2": 10.43085982,
      "y3": 11.06642694,
      "y4": 11.73822523,
      "y5": 12.62940296,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {},
      "id": "boxPlot",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "High income": "High income",
          "Low income": "Low income",
        },
        "colorItems": [
          "High income",
          "Low income",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "x",
      "encoding": "xAxis",
      "id": "x",
    },
    {
      "alias": "group",
      "encoding": "color",
      "id": "group",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "group",
    ],
    "label": [],
    "max": [
      "y5",
    ],
    "median": [
      "y3",
    ],
    "min": [
      "y1",
    ],
    "outliers": [
      "outliers",
    ],
    "q1": [
      "y2",
    ],
    "q3": [
      "y4",
    ],
    "tooltip": [
      "x",
      "group",
    ],
    "value": [],
    "x": [
      "x",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "y1",
      "encoding": "min",
      "id": "y1",
    },
    {
      "alias": "y2",
      "encoding": "q1",
      "id": "y2",
    },
    {
      "alias": "y3",
      "encoding": "median",
      "id": "y3",
    },
    {
      "alias": "y4",
      "encoding": "q3",
      "id": "y4",
    },
    {
      "alias": "y5",
      "encoding": "max",
      "id": "y5",
    },
    {
      "alias": "outliers",
      "encoding": "outliers",
      "id": "outliers",
    },
  ],
}
`;

exports[`aggression 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "hover": true,
      "label": {
        "autoHide": undefined,
        "autoHideMethod": "greedy",
        "autoHideSeparation": undefined,
        "autoLimit": undefined,
        "autoRotate": undefined,
        "autoRotateAngle": undefined,
        "flush": true,
        "lastVisible": true,
        "minGap": undefined,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": true,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "x",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "fillOpacity": 1,
      "lineWidth": 1,
      "visible": true,
    },
  },
  "color": {
    "domain": [
      "High income",
      "Low income",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {},
    "id": "boxPlot",
    "values": [
      {
        "__Dim_ColorId__": "High income",
        "__Dim_Color__": "High income",
        "__Dim_X__": "Sub-Saharan Africa",
        "__Max__": 11.62222959,
        "__Meadian__": 10.09027907,
        "__Min__": 9.16270124,
        "__Q1__": 10.07530816,
        "__Q3__": 10.27579542,
        "group": "High income",
        "x": "Sub-Saharan Africa",
        "y1": 9.16270124,
        "y2": 10.07530816,
        "y3": 10.09027907,
        "y4": 10.27579542,
        "y5": 11.62222959,
      },
      {
        "__Dim_ColorId__": "Low income",
        "__Dim_Color__": "Low income",
        "__Dim_X__": "Sub-Saharan Africa",
        "__Max__": 11.64427467,
        "__Meadian__": 10.1736233,
        "__Min__": 8.721525214,
        "__Q1__": 9.641352839,
        "__Q3__": 10.57169914,
        "group": "Low income",
        "x": "Sub-Saharan Africa",
        "y1": 8.721525214,
        "y2": 9.641352839,
        "y3": 10.1736233,
        "y4": 10.57169914,
        "y5": 11.64427467,
      },
      {
        "__Dim_ColorId__": "Low income",
        "__Dim_Color__": "Low income",
        "__Dim_X__": "South Asia",
        "__Max__": 12.50192084,
        "__Meadian__": 10.94903493,
        "__Min__": 9.404757278,
        "__Q1__": 10.36482449,
        "__Q3__": 11.5806383,
        "group": "Low income",
        "x": "South Asia",
        "y1": 9.404757278,
        "y2": 10.36482449,
        "y3": 10.94903493,
        "y4": 11.5806383,
        "y5": 12.50192084,
      },
      {
        "__Dim_ColorId__": "High income",
        "__Dim_Color__": "High income",
        "__Dim_X__": "South Asia",
        "__Max__": 9.732841997,
        "__Meadian__": 9.732841997,
        "__Min__": 9.732841997,
        "__Q1__": 9.732841997,
        "__Q3__": 9.732841997,
        "group": "High income",
        "x": "South Asia",
        "y1": 9.732841997,
        "y2": 9.732841997,
        "y3": 9.732841997,
        "y4": 9.732841997,
        "y5": 9.732841997,
      },
      {
        "__Dim_ColorId__": "Low income",
        "__Dim_Color__": "Low income",
        "__Dim_X__": "Middle East & North Africa",
        "__Max__": 11.60653481,
        "__Meadian__": 10.91206173,
        "__Min__": 9.541951901,
        "__Q1__": 10.33719892,
        "__Q3__": 11.29821858,
        "group": "Low income",
        "x": "Middle East & North Africa",
        "y1": 9.541951901,
        "y2": 10.33719892,
        "y3": 10.91206173,
        "y4": 11.29821858,
        "y5": 11.60653481,
      },
      {
        "__Dim_ColorId__": "High income",
        "__Dim_Color__": "High income",
        "__Dim_X__": "Middle East & North Africa",
        "__Max__": 11.92092709,
        "__Meadian__": 11.09996104,
        "__Min__": 10.2396509,
        "__Q1__": 10.63879995,
        "__Q3__": 11.54301107,
        "group": "High income",
        "x": "Middle East & North Africa",
        "y1": 10.2396509,
        "y2": 10.63879995,
        "y3": 11.09996104,
        "y4": 11.54301107,
        "y5": 11.92092709,
      },
      {
        "__Dim_ColorId__": "Low income",
        "__Dim_Color__": "Low income",
        "__Dim_X__": "Latin America & Caribbean",
        "__Max__": 10.6064696,
        "__Meadian__": 10.45467215,
        "__Min__": 10.14653181,
        "__Q1__": 10.32106777,
        "__Q3__": 10.45844052,
        "group": "Low income",
        "x": "Latin America & Caribbean",
        "y1": 10.14653181,
        "y2": 10.32106777,
        "y3": 10.45467215,
        "y4": 10.45844052,
        "y5": 10.6064696,
      },
      {
        "__Dim_ColorId__": "High income",
        "__Dim_Color__": "High income",
        "__Dim_X__": "Latin America & Caribbean",
        "__Max__": 12.20655104,
        "__Meadian__": 10.16606248,
        "__Min__": 8.743652009,
        "__Q1__": 9.413881158,
        "__Q3__": 11.00011805,
        "group": "High income",
        "x": "Latin America & Caribbean",
        "y1": 8.743652009,
        "y2": 9.413881158,
        "y3": 10.16606248,
        "y4": 11.00011805,
        "y5": 12.20655104,
      },
      {
        "__Dim_ColorId__": "High income",
        "__Dim_Color__": "High income",
        "__Dim_X__": "East Asia & Pacific",
        "__Max__": 13.24880824,
        "__Meadian__": 10.14633178,
        "__Min__": 7.800035977,
        "__Q1__": 8.850646235,
        "__Q3__": 11.59877618,
        "group": "High income",
        "x": "East Asia & Pacific",
        "y1": 7.800035977,
        "y2": 8.850646235,
        "y3": 10.14633178,
        "y4": 11.59877618,
        "y5": 13.24880824,
      },
      {
        "__Dim_ColorId__": "Low income",
        "__Dim_Color__": "Low income",
        "__Dim_X__": "East Asia & Pacific",
        "__Max__": 12.07411874,
        "__Meadian__": 10.22954548,
        "__Min__": 8.316035904,
        "__Q1__": 9.038602613,
        "__Q3__": 10.71782871,
        "group": "Low income",
        "x": "East Asia & Pacific",
        "y1": 8.316035904,
        "y2": 9.038602613,
        "y3": 10.22954548,
        "y4": 10.71782871,
        "y5": 12.07411874,
      },
      {
        "__Dim_ColorId__": "Low income",
        "__Dim_Color__": "Low income",
        "__Dim_X__": "Europe & Central Asia",
        "__Max__": 11.3012157,
        "__Meadian__": 10.39108655,
        "__Min__": 9.831631935,
        "__Q1__": 9.939275167,
        "__Q3__": 10.95556656,
        "group": "Low income",
        "x": "Europe & Central Asia",
        "y1": 9.831631935,
        "y2": 9.939275167,
        "y3": 10.39108655,
        "y4": 10.95556656,
        "y5": 11.3012157,
      },
      {
        "__Dim_ColorId__": "High income",
        "__Dim_Color__": "High income",
        "__Dim_X__": "Europe & Central Asia",
        "__Max__": 12.62940296,
        "__Meadian__": 11.06642694,
        "__Min__": 9.522480948,
        "__Q1__": 10.43085982,
        "__Q3__": 11.73822523,
        "group": "High income",
        "outliers": [
          8.5,
          13.5,
        ],
        "x": "Europe & Central Asia",
        "y1": 9.522480948,
        "y2": 10.43085982,
        "y3": 11.06642694,
        "y4": 11.73822523,
        "y5": 12.62940296,
      },
    ],
  },
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "large": false,
  "largeThreshold": Infinity,
  "legends": {
    "autoPage": true,
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
          "unSelectedHover": {
            "fill": null,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "state": {
          "unSelected": {
            "fill": "#646A73",
            "fillOpacity": 0.8,
          },
        },
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "state": {
          "unSelected": {
            "fillOpacity": 1,
            "opacity": 0.2,
          },
        },
        "style": [Function],
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "maxField": "__Max__",
  "medianField": "__Meadian__",
  "minField": "__Min__",
  "outliersField": "__Outliers__",
  "padding": 0,
  "progressiveStep": 400,
  "progressiveThreshold": Infinity,
  "q1Field": "__Q1__",
  "q3Field": "__Q3__",
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [Function],
  "tooltip": {
    "dimension": {
      "visible": false,
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": "x",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": "group",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        [
          {
            "hasShape": true,
            "key": "__Max__",
            "shapeType": "rectRound",
            "value": [Function],
            "visible": true,
          },
          {
            "hasShape": true,
            "key": "__Q3__",
            "shapeType": "rectRound",
            "value": [Function],
            "visible": true,
          },
          {
            "hasShape": true,
            "key": "__Meadian__",
            "shapeType": "rectRound",
            "value": [Function],
            "visible": true,
          },
          {
            "hasShape": true,
            "key": "__Q1__",
            "shapeType": "rectRound",
            "value": [Function],
            "visible": true,
          },
          {
            "hasShape": true,
            "key": "__Min__",
            "shapeType": "rectRound",
            "value": [Function],
            "visible": true,
          },
        ],
      ],
      "title": {
        "visible": false,
      },
      "updateContent": [Function],
    },
    "visible": true,
  },
  "type": "boxPlot",
  "xField": [
    "__Dim_X__",
    "__Dim_Color__",
  ],
}
`;

exports[`aggression 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "High income": "High income",
    "Low income": "Low income",
  },
  "colorItems": [
    {
      "alias": "High income",
      "id": "High income",
    },
    {
      "alias": "Low income",
      "id": "Low income",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
